--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "jsdom": "^26.1.0",
+    "node-fetch": "^2.7.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
