feat(auth-lite): einfacher Passwortschutz via Prompt (VITE_APP_PASSWORD); Session-basiert

--- a/env.example
+++ b/env.example
@@ -8,3 +8,6 @@ VITE_FIREBASE_APP_ID=1:123456789:web:abcdef123456
 
 # Gemini API (bereits vorhanden)
 GEMINI_API_KEY=your-gemini-api-key-here 
+
+# Optional: einfacher Passwortschutz für die App
+VITE_APP_PASSWORD=
